# volto-light-theme

./: .editorconfig  .eslintignore  .eslintrc  .eslintrc.js  .gitignore  .meta.toml  .npmrc  .prettierignore  .readthedocs.yaml  .release-it.json  BLOCK-MODEL-V3.md  CHANGELOG.md  CHANGES.md  Dockerfile  MANIFEST.in  Makefile  Plonetry  README.md  UPGRADE-GUIDE.md  check-recommended-addons.js  constraints.txt  cypress.config.js  dirty.py  docker-compose-dev.yml  docker-compose.yml  helper.py  instance.yaml  mrs.developer.json  mx.ini  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  razzle.extend.js  recommendedAddons.json  repository.toml  requirements-docker.txt  requirements-docs.txt  requirements.txt  setup.py  (+5 more)
backend/: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGES.md  CONTRIBUTORS.md  Dockerfile  Dockerfile.acceptance  LICENSE.md  MANIFEST.in  Makefile  README.md  constraints.txt  docker-entrypoint.sh  instance.yaml  mx.ini  pyproject.toml  requirements.txt  setup.py
backend/.github/workflows/: meta.yml
backend/news/: +addColophonTextDefault.feature  +addHeadingBlockExaple.feature  +addMissingTranslation.bugfix  +bannerBlockUpdateExampleContent.internal  +blockexamplecontent.internal  +customizable-colophon.feature  +distribution-name.internal  +errorcontext.bugfix  +errors.bugfix  +fixpinplonegovbr.socialmedia.internal  +install_behavior_demo.feature  +kicker.internal  +mobilestickymenu.feature  +native.namespaces.internal  +nativenamespaces.feature  +navigationtitle.feature  +plone611.internal  +primarytoheadercolor.bugfix  +python.internal  +re-releasinga3.internal  +readme.internal  +release.feature  +renamefooterfields.breaking  +richtext.bugfix  +transferkfootertocore.breaking  +updatePlone6.1.4.internal  +updatePlone6.2.0.internal  +updateSocialMedia.internal  +updatesocialmediaandVolto.bugfix  +volto18.27.3andsocialmedia.bugfix  1.feature  497.feature  508.feature  516.feature  522.internal  523.feature  524.bugfix  525.feature  525.internal  581.feature  (+15 more)
backend/scripts/: create_site.py  default.json  migrate.py
backend/src/kitconcept/voltolighttheme/: __init__.py  configure.zcml  dependencies.zcml  distributions.zcml  interfaces.py  profiles.zcml  testing.py
backend/src/kitconcept/voltolighttheme/behaviors/: configure.zcml  customizations.py  footer.py  kvolto.py  sticky_menu.py
backend/src/kitconcept/voltolighttheme/browser/: __init__.py  configure.zcml  errors.py
backend/src/kitconcept/voltolighttheme/controlpanel/: configure.zcml
backend/src/kitconcept/voltolighttheme/distributions/voltolighttheme/: profiles.json
backend/src/kitconcept/voltolighttheme/locales/: __main__.py  kitconcept.voltolighttheme.pot  update.py
backend/src/kitconcept/voltolighttheme/profiles/acceptance/: metadata.xml
backend/src/kitconcept/voltolighttheme/profiles/default/: catalog.xml  metadata.xml
backend/src/kitconcept/voltolighttheme/profiles/demo/: actions.xml
backend/src/kitconcept/voltolighttheme/profiles/uninstall/: browserlayer.xml
backend/src/kitconcept/voltolighttheme/setuphandlers/: __init__.py  acceptance.py  demo.py
backend/src/kitconcept/voltolighttheme/setuphandlers/examplecontent/: .gitignore  principals.json  relations.json
backend/src/kitconcept/voltolighttheme/upgrades/: configure.zcml  v20250321001.py
backend/tests/: conftest.py
backend/tests/api/: test_errors.py
backend/tests/demo/: conftest.py  test_demo.py
backend/tests/setup/: test_setup_install.py  test_setup_uninstall.py
docs/: .gitignore  LICENSE  Makefile  block-model-v3.md  compatibility.md  conf.py  contributing.md  feature-flags.md  index.md  install.md  main.py  pyproject.toml  releases.md  robots.txt  summary.md  upgrade-guide.md
docs/conceptual-guides/: block-model-v3.md  color-system.md  customization-behavior.md  distributions-customization.md  layout.md  reasoning-headless-component-system.md  requirements-and-specifications.md  site-customization.md  vertical-spacing.md
docs/how-to-guides/: acceptance-tests.md  contributing.md  develop-add-ons.md  install.md  release.md  releases.md  remove-colophon.md  social-media.md  summary.md  swap-structural-components.md  upgrade-guide.md  visual-regression-tests.md
docs/reference/: card.md  colors.md  compatibility.md  helpers.md  image-aspect-ratio.md  recommended-addons.md  release.md  slots.md  storybook.md  use-live-data.md  widgets.md
frontend/: .npmrc  (+17 more)
(+798 files in other folders)
